<resources>
    <string name="app_name">Culinary Companion</string>
    <string name="add_recipe_fab_desc">Add new recipe</string>
    <string name="recipe_name_hint">Recipe Name</string>
    <string name="ingredients_hint">Ingredients</string>
    <string name="instructions_hint">Cooking Instructions</string>
    <string name="category_hint">Category</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
</resources>